Add SQL ServletContextListener

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 DATABASE_URL=postgres://postgres:postgres@localhost:5432/shoulder
-JDBC_DATABASE_URL=jdbc:postgresql://localhost:5432/shoulder
+JDBC_DATABASE_URL="jdbc:postgresql://localhost:5432/shoulder"
+JDBC_DATABASE_USERNAME=postgres
+JDBC_DATABASE_PASSWORD=postgres
